--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,11 @@
 <html>
   <head>
-    <title>Embark</title>
-    <link rel="stylesheet" href="css/app.css">
-    <script src="js/app.js"></script>
+    <title>My Governance</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/dapp.css">
   </head>
   <body>
-    <h3>Welcome to Embark!</h3>
-    <p>See the <a href="https://framework.embarklabs.io/docs/quick_start.html" target="_blank">Embark's documentation</a> to see what you can do with Embark!</p>
+    <div id="app"></div>
+    <script src="js/index.js"></script>
   </body>
 </html>
