--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="js/index.js"></script>
+    <script src="js/index.js" charset="UTF-8"></script>
   </body>
 </html>
